
    o enrich_motifs(mode, pseudocount): Choose whether to count motif hits
      once per sequence, and whether to add a pseudocount for P-value
      calculation.

    o New function, meme_alph(): Create MEME custom alphabet definition files.

    o merge_similar(return.clusters): Return the clusters without merging.

    o convert_motifs(): MotifDb-MotifList now available as an output format.

MINOR CHANGES

    o enrich_motifs(): RC argument now defaults to TRUE, increased max
      significance values, no.overlaps now defaults to TRUE. Additional
      columns showing the motif consensus sequence and percent of sequences
      with hits are now included.

    o scan_sequences(RC): Only print a warning if RC=TRUE for non-DNA/RNA
      motifs.

    o Reduced the size of the message when a pseudocount is added to motifs.

CHANGES IN VERSION 1.12.4
-------------------------

BUG FIXES

    o convert_motifs(): Properly handle TFBSTools class motifs with '*' as
      their strand. This was achieved by making the universalmotif object
      creator tolerant to using '*' as a user input. Thanks to David Oliver
      for the bug report (#22).

CHANGES IN VERSION 1.12.3
-------------------------

BUG FIXES

    o scan_sequences(): Previously this function did not account for the fact
      that duplicate sequence names are allowed within XStringSet objects. To
      better keep track of which sequence hits are associated with, an
      additional sequence.i column has been added which keeps track of the
      sequence number. This change also fixes a knock-on issue with
      enrich_motifs(), where sequences with duplicate names did not contribute
      to the count of sequences containing hits. Thanks to Alexandre Blais for
      mentioning this issue.

CHANGES IN VERSION 1.12.2
-------------------------

BUG FIXES

    o shuffle_sequences(..., method="markov"): Previously the returning
      sequences were longer by 1.

CHANGES IN VERSION 1.12.1