@@ -6,6 +6,14 @@
 #'
 #' @return `list` [universalmotif-class] objects.
 #'
+#' @details
+#'
+#' A few TRANSFAC tags are recognized, including AC, ID, NA, HC and OS.
+#' HC will be set to the family slot and OS to the organism slot.
+#' If AC, ID and NA are present, then AC will be set as the motif name
+#' and NA as the alternate name. If AC is absent, then ID is set as the
+#' name. If ID is also absent, then NA is set as the motif name.
+#'
 #' @examples
 #' transfac <- read_transfac(system.file("extdata", "transfac.txt",
 #'                                       package = "universalmotif"))
