@@ -115,7 +115,5 @@
 - create a separate container for higher order motifs
 - scan_sequences(): for large jobs, save temporary results on disk; maybe use the qs pkg?
 - combine view_motifs() with EnrichedHeatmap/ComplexHeatmap?
-- enrich_motifs(): what about duplicate sequences!!!
-- enrich_motifs(): error if no hits in bkg
-- create_motif(nsites = 123): nsites not actually carried over!!!
 - compare_motifs() w/ normalization: does this still work for scores w/ -ve values?
+- scan_sequences(): needs a serious performance overhaul for large jobs
